force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/AH_Salesforce_Trust_Notification__c.object-meta.xml
<CustomObject>
    <description>NICC-031037 - Used to store Incident, Maintenance and General Message notifications retrieved via API from the Salesforce Trust website.</description>
    <label>AH Salesforce Trust Notification</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH Salesforce Trust Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>