force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Action Plan for resolving the incident.</inlineHelpText>
    <label>Action Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>