force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional information provided in the notification.</inlineHelpText>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>