force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Affects_All__c.field-meta.xml
<CustomField>
    <fullName>Affects_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-031037</description>
    <label>Affects All</label>
    <type>Checkbox</type>
</CustomField>