force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Availability of the instance during the maintenance event.</inlineHelpText>
    <label>Availability</label>
    <length>80</length>
    <type>Text</type>
</CustomField>