force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When the notification was created on the Salesforce Trust website.</inlineHelpText>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>