force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>End Date of the the message.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>