force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status of the maintenance event.</inlineHelpText>
    <label>Event Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>