force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Is_Core__c.field-meta.xml
<CustomField>
    <fullName>Is_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-031037</description>
    <label>Is Core</label>
    <type>Checkbox</type>
</CustomField>