force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The type of maintenance being performed during the event.</inlineHelpText>
    <label>Maintenance Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>