force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Body__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contents of the message.</inlineHelpText>
    <label>Message Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>