force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the maintenance event.</inlineHelpText>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>