force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Path_to_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Path_to_Resolution__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Path to Resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>