force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Planned_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_Time__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Planned End Time for the maintenance event.</inlineHelpText>
    <label>Planned End Time</label>
    <type>DateTime</type>
</CustomField>