force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Root Cause of the incident.</inlineHelpText>
    <label>Root Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>