force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Services affected by the incident or maintenance event.</inlineHelpText>
    <label>Services</label>
    <type>TextArea</type>
</CustomField>