force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/SF_Trust_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Trust_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Salesforce Trust ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>