force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Start Date of the message.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>