force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/fields/Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Updated_At__c</fullName>
    <description>NICC-031037</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When the notification was last updated on the Salesforce Trust website.</inlineHelpText>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>