force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/recordTypes/General_Message.recordType-meta.xml
<RecordType>
    <fullName>General_Message</fullName>
    <active>true</active>
    <description>Used for Salesforce Trust General Messages</description>
    <label>General Message</label>
</RecordType>