force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <description>Used for Salesforce Trust Incidents</description>
    <label>Incident</label>
</RecordType>