force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>true</active>
    <description>Used for Salesforce Trust Maintenances</description>
    <label>Maintenance</label>
</RecordType>