force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>NAME</columns>
    <columns>SF_Trust_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Maintenance_Type__c</columns>
    <columns>Created_At__c</columns>
    <columns>Updated_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>