force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/listViews/General_Messages.listView-meta.xml
<ListView>
    <fullName>General_Messages</fullName>
    <columns>NAME</columns>
    <columns>SF_Trust_ID__c</columns>
    <columns>Created_At__c</columns>
    <columns>Updated_At__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_Salesforce_Trust_Notification__c.General_Message</value>
    </filters>
    <label>General Messages</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>