force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/listViews/Incidents.listView-meta.xml
<ListView>
    <fullName>Incidents</fullName>
    <columns>NAME</columns>
    <columns>SF_Trust_ID__c</columns>
    <columns>Created_At__c</columns>
    <columns>Updated_At__c</columns>
    <columns>Services__c</columns>
    <columns>Root_Cause__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_Salesforce_Trust_Notification__c.Incident</value>
    </filters>
    <label>Incidents</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>