force-app/main/default/objects/AH_Salesforce_Trust_Notification__c/listViews/Maintenance.listView-meta.xml
<ListView>
    <fullName>Maintenance</fullName>
    <columns>NAME</columns>
    <columns>SF_Trust_ID__c</columns>
    <columns>Created_At__c</columns>
    <columns>Updated_At__c</columns>
    <columns>Planned_Start_Time__c</columns>
    <columns>Planned_End_Time__c</columns>
    <columns>Maintenance_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_Salesforce_Trust_Notification__c.Maintenance</value>
    </filters>
    <label>Maintenance</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>